@@ -1,5 +1,4 @@
 package Test::BrewBuild;
-use 5.006;
 use strict;
 use warnings;
 
