@@ -12,6 +12,9 @@ Revision history for Test-BrewBuild
         - --debug param now accepts a level param (0-7) to set the level (added
           Logging::Simple as prereq)
         - added numerous debug statements at varying levels
+        - remove all prereqs from Makefile.PL that are already in core
+          (closes #15)
+
 
 0.04    2016-03-16
         - testing now properly works across all installed perls
